# dxf2drill

./: .gitignore  LICENCE.txt  README.md  dxf2drill.py  dxfstrip.py  pyproject.toml
