[project]
name = "dxf2drill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ezdxf>=1.3.5",
]

[project.scripts]
dxf2drill = "dxf2drill:main"
dxfstrip = "dxfstrip:main"

[tool.setuptools]
#packages = ["dxf2drill", "dxfstrip"]
py-modules = []
